{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 38,
  "lineage": "2a05fdec-2141-3ccf-d1ea-88d14ef6082d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-NGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.10",
            "domain": "vpc",
            "id": "eipalloc-0317faea51c5c3578",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-170-218-238.compute-1.amazonaws.com",
            "public_ip": "35.170.218.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Production_EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "backend-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:921358061875:loadbalancer/Production-Backend-LoadBalancer",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "internal-Production-Backend-LoadBalancer-1583285807.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 5,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "Production-Backend-LoadBalancer",
            "idle_timeout": 60,
            "internal": true,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "HTTP",
                "lb_port": 80,
                "lb_protocol": "HTTP"
              }
            ],
            "name": "Production-Backend-LoadBalancer",
            "security_groups": [
              "sg-01b12af7c191d1703"
            ],
            "source_security_group": "921358061875/ELB-SG",
            "source_security_group_id": "sg-01b12af7c191d1703",
            "subnets": [
              "subnet-044bcce5a58e40b02",
              "subnet-04bef290581cc4560",
              "subnet-0e004661a1390029c"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_security_group",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.private_subnet_3",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "webapp-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:921358061875:loadbalancer/Production-WebApp-LoadBalancer",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "Production-WebApp-LoadBalancer-1439013444.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 5,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "Production-WebApp-LoadBalancer",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "HTTP",
                "lb_port": 80,
                "lb_protocol": "HTTP"
              }
            ],
            "name": "Production-WebApp-LoadBalancer",
            "security_groups": [
              "sg-089fae6dd9f73c8e9"
            ],
            "source_security_group": "921358061875/EC2-Public-SG",
            "source_security_group_id": "sg-089fae6dd9f73c8e9",
            "subnets": [
              "subnet-04faeba3fafd81004",
              "subnet-06994473294a7ed81",
              "subnet-0e46f9bd0c42ddbc7"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ec2_public_security_group",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.production_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "production-INGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:internet-gateway/igw-03d7b1d707600b12d",
            "id": "igw-03d7b1d707600b12d",
            "owner_id": "921358061875",
            "tags": {
              "Name": "Production internetGW"
            },
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "dependencies": [
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0317faea51c5c3578",
            "id": "nat-0e6b886111c2f2afd",
            "network_interface_id": "eni-094f4a5b306bd84ff",
            "private_ip": "10.0.1.28",
            "public_ip": "35.170.218.238",
            "subnet_id": "subnet-0e46f9bd0c42ddbc7",
            "tags": {
              "Name": "Production-Nat-GW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-NGW",
            "aws_subnet.public_subnet_1",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gateway-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d5fde7c04313c42c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e6b886111c2f2afd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d5fde7c04313c42c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-for-NGW",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internetGW-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03d7b1d707600b12d",
            "id": "r-rtb-093a2655eefdde8f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093a2655eefdde8f9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.production-INGW",
            "aws_route_table.public_route_table",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:route-table/rtb-0d5fde7c04313c42c",
            "id": "rtb-0d5fde7c04313c42c",
            "owner_id": "921358061875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:route-table/rtb-093a2655eefdde8f9",
            "id": "rtb-093a2655eefdde8f9",
            "owner_id": "921358061875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3b9c8fdacc81c3d",
            "route_table_id": "rtb-0d5fde7c04313c42c",
            "subnet_id": "subnet-04bef290581cc4560"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdfe382284fa8e3c",
            "route_table_id": "rtb-0d5fde7c04313c42c",
            "subnet_id": "subnet-044bcce5a58e40b02"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030182daa554eedbc",
            "route_table_id": "rtb-0d5fde7c04313c42c",
            "subnet_id": "subnet-0e004661a1390029c"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_3",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042469a75d9fb51e1",
            "route_table_id": "rtb-093a2655eefdde8f9",
            "subnet_id": "subnet-0e46f9bd0c42ddbc7"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5aef503a04d004b",
            "route_table_id": "rtb-093a2655eefdde8f9",
            "subnet_id": "subnet-04faeba3fafd81004"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082178143d0120afa",
            "route_table_id": "rtb-093a2655eefdde8f9",
            "subnet_id": "subnet-06994473294a7ed81"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_3",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:security-group/sg-0d55d4634f74d58ba",
            "description": "Only allow public EC2 instances to access these instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d55d4634f74d58ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic for health checking, remember this doesnt allow public internet!",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-089fae6dd9f73c8e9"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "EC2-Private-SG",
            "name_prefix": "",
            "owner_id": "921358061875",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_public_security_group",
            "aws_vpc.production_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:security-group/sg-089fae6dd9f73c8e9",
            "description": "Internet facing EC2 Public Security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089fae6dd9f73c8e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "EC2-Public-SG",
            "name_prefix": "",
            "owner_id": "921358061875",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.production_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:security-group/sg-01b12af7c191d1703",
            "description": "ELB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b12af7c191d1703",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow web traffic to load balancer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ELB-SG",
            "name_prefix": "",
            "owner_id": "921358061875",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:subnet/subnet-04bef290581cc4560",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-04bef290581cc4560",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "921358061875",
            "tags": {
              "Name": "Private Subnet 1 in 1a"
            },
            "tags_all": {
              "Name": "Private Subnet 1 in 1a"
            },
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "dependencies": [
            "aws_vpc.production_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:subnet/subnet-044bcce5a58e40b02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-044bcce5a58e40b02",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "921358061875",
            "tags": {
              "Name": "Private Subnet 2 in 1b"
            },
            "tags_all": {
              "Name": "Private Subnet 2 in 1b"
            },
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "dependencies": [
            "aws_vpc.production_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:subnet/subnet-0e004661a1390029c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0e004661a1390029c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "921358061875",
            "tags": {
              "Name": "Private Subnet 3 in 1c"
            },
            "tags_all": {
              "Name": "Private Subnet 3 in 1c"
            },
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "dependencies": [
            "aws_vpc.production_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:subnet/subnet-0e46f9bd0c42ddbc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e46f9bd0c42ddbc7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "921358061875",
            "tags": {
              "Name": "Public Subnet 1 in 1a"
            },
            "tags_all": {
              "Name": "Public Subnet 1 in 1a"
            },
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "dependencies": [
            "aws_vpc.production_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:subnet/subnet-04faeba3fafd81004",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04faeba3fafd81004",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "921358061875",
            "tags": {
              "Name": "Public Subnet 2 in 1b"
            },
            "tags_all": {
              "Name": "Public Subnet 2 in 1b"
            },
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "dependencies": [
            "aws_vpc.production_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:subnet/subnet-06994473294a7ed81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06994473294a7ed81",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "921358061875",
            "tags": {
              "Name": "Public Subnet 3 in 1c"
            },
            "tags_all": {
              "Name": "Public Subnet 3 in 1c"
            },
            "vpc_id": "vpc-068ec1bbade62ef20"
          },
          "dependencies": [
            "aws_vpc.production_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "production_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921358061875:vpc/vpc-068ec1bbade62ef20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4b2e4e84f612b93",
            "default_route_table_id": "rtb-094424b7a4f7c6214",
            "default_security_group_id": "sg-0c97ab6828bb88227",
            "dhcp_options_id": "dopt-04ae6ace1b258af46",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-068ec1bbade62ef20",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-094424b7a4f7c6214",
            "owner_id": "921358061875",
            "tags": {
              "Name": "production-vpc"
            },
            "tags_all": {
              "Name": "production-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}